--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,5 +13,6 @@
         <button type="submit" >Login</button>
     </form>
     <a href="/users/register">Register</a>
+    <a href="/users/checkpnr">Check Details</a>
 </body>
 </html>
